# steam2

./: Cargo.toml  README.md  Rocket.toml  index.html  index.js  style.css
pages/: search.html
scripts/: search.js
src/: cache.rs  main.rs  pages.rs
static/scripts/: game.js  global.js  header.js  index.js  old_index.js  search.js
static/styles/: about.css  contact.css  download.css  footer.css  game.css  global.css  header.css  index.css  navbar.css  search.css  style.css
templates/: about.html.tera  base.html.tera  contact.html.tera  download.html.tera  game.html.tera  index.html.tera  macros.html.tera  search.html  search.html.tera
templates/global/: base.html.tera  footer.html.tera  header.html.tera  macros.html.tera
